[gd_scene load_steps=19 format=3 uid="uid://dmvpxtfxtrd8r"]

[ext_resource type="Script" path="res://script/boss.gd" id="1_l4a3e"]
[ext_resource type="Texture2D" uid="uid://2fwyswl3o8f5" path="res://sprites/bossAttack/bossAttack_0000.png" id="2_slyta"]
[ext_resource type="Texture2D" uid="uid://cqpqtd2aafko" path="res://sprites/bossAttack/bossAttack_0001.png" id="3_5yle1"]
[ext_resource type="Texture2D" uid="uid://bcoxnyej1xhjc" path="res://sprites/bossAttack/bossAttack_0002.png" id="4_obnab"]
[ext_resource type="Texture2D" uid="uid://c6dhyqpvghv5k" path="res://sprites/bossAttack/bossAttack_0003.png" id="5_t6jk7"]
[ext_resource type="Texture2D" uid="uid://ms0erc2464dv" path="res://sprites/bossAttack/bossAttack_0004.png" id="6_2xpsv"]
[ext_resource type="Texture2D" uid="uid://bpawexsixvxvg" path="res://sprites/bossIdle/bossIdle_0000.png" id="7_cu622"]
[ext_resource type="Texture2D" uid="uid://b1roun28ny5mv" path="res://sprites/bossIdle/bossIdle_0001.png" id="8_kapbn"]
[ext_resource type="Texture2D" uid="uid://cwbu3vbw05i3k" path="res://sprites/bossIdle/bossIdle_0002.png" id="9_dxwr7"]
[ext_resource type="Texture2D" uid="uid://dad3vbaj87his" path="res://sprites/bossIdle/bossIdle_0003.png" id="10_833ng"]
[ext_resource type="Texture2D" uid="uid://ntj47f78v3nf" path="res://sprites/bossWalk/bossWalk_0000.png" id="11_wsgc3"]
[ext_resource type="Texture2D" uid="uid://ovet164rlmw" path="res://sprites/bossWalk/bossWalk_0001.png" id="12_kbw7p"]
[ext_resource type="Texture2D" uid="uid://c2mp4ge1xss3s" path="res://sprites/bossWalk/bossWalk_0002.png" id="13_ddack"]
[ext_resource type="Texture2D" uid="uid://dtc5dtvetao6w" path="res://sprites/bossWalk/bossWalk_0003.png" id="14_p67b2"]

[sub_resource type="SpriteFrames" id="SpriteFrames_paof4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_slyta")
}, {
"duration": 1.0,
"texture": ExtResource("3_5yle1")
}, {
"duration": 1.0,
"texture": ExtResource("4_obnab")
}, {
"duration": 1.0,
"texture": ExtResource("5_t6jk7")
}, {
"duration": 1.0,
"texture": ExtResource("6_2xpsv")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_cu622")
}, {
"duration": 1.0,
"texture": ExtResource("8_kapbn")
}, {
"duration": 1.0,
"texture": ExtResource("9_dxwr7")
}, {
"duration": 1.0,
"texture": ExtResource("10_833ng")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_wsgc3")
}, {
"duration": 1.0,
"texture": ExtResource("12_kbw7p")
}, {
"duration": 1.0,
"texture": ExtResource("13_ddack")
}, {
"duration": 1.0,
"texture": ExtResource("14_p67b2")
}],
"loop": true,
"name": &"walk",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sjbiq"]
size = Vector2(206, 268)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yqlwl"]
size = Vector2(274, 340)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rdwv3"]
radius = 852.0
height = 1704.0

[node name="boss" type="CharacterBody2D"]
script = ExtResource("1_l4a3e")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_paof4")
animation = &"idle"
frame = 1
frame_progress = 0.900548

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(58, 16)
shape = SubResource("RectangleShape2D_sjbiq")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(57, 7)
shape = SubResource("RectangleShape2D_yqlwl")

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CapsuleShape2D_rdwv3")

[node name="takeDamage" type="Timer" parent="."]
wait_time = 0.5

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(1, 0.32, 0.478666, 1)
offset_left = -81.0
offset_top = 220.0
offset_right = 198.0
offset_bottom = 247.0
show_percentage = false

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="takeDamage" to="." method="_on_take_damage_timeout"]
